1.add compress project 2.modify some bug

--- a/MtimeBuildTool/app.config
+++ b/MtimeBuildTool/app.config
@@ -2,9 +2,19 @@
 <configuration>
   <appSettings>
     <add key="ExceptionLogPath" value="D:\MtimeTemp\MtimeBuildTool\"/>
-    <add key="MtimeMovieCommunityRootPath" value="C:\Inetpub\wwwroot\MtimeMovieCommunityRoot\" />
-    <add key="MtimeWapRootPath" value="C:\Inetpub\wwwroot\m.test.com\" />
-    <add key="MtimeCompressToolPath" value="D:\CCNet\Codev3.0\Tools\MtimeClientCompress.root\MtimeClientCompress\MtimeClientCompress\bin\Release\MtimeClientCompress.exe" />
+    <add key="MtimeMovieCommunityRootPath" value="E:\Publish\Version\MtimeMovieCommunityRoot\" />
+    <add key="MtimeWapRootPath" value="E:\Publish\Version\MtimeWapRoot\" />
+    <add key="MtimeCompressToolPath" value="E:\CCNet\Codev3.0\Tools\MtimeClientCompress.root\MtimeClientCompress\MtimeClientCompress\bin\Release\MtimeClientCompress.exe" />
+    <!-- 本地静态资源 -->
+    <add key="Local_StaticResourceServer" value="http://114.255.169.215:8000/"/>
+    <!-- 服务器静态资源 -->
+    <add key="Server_StaticResourceServer" value="http://static1.mtime.cn/"/>
+    <!-- 是否灰度处理图片 -->
+    <add key="IsGrayImage" value="true"/>
+    <!-- 使用新版压缩器 -->
+    <add key="ApplyNewCompressor" value="true"/>
+    <!-- 压缩单个文件超时设置，单位：分 -->
+    <add key="CompressTimeout" value="5"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
