--- a/MtimeBuildTool/MtimeBuildTool.csproj
+++ b/MtimeBuildTool/MtimeBuildTool.csproj
@@ -57,7 +57,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Resources\jsl.default.conf" />
+    <None Include="Resources\Run.bat" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="config\MtimeProjectMap.xml">
@@ -69,8 +73,24 @@
     <Content Include="config\MachineAccount.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\Configs.xml" />
+    <Content Include="Resources\gzip.exe" />
+    <Content Include="Resources\jpegtran.exe" />
+    <Content Include="Resources\jsl.exe" />
+    <Content Include="Resources\optipng.exe" />
+    <Content Include="Resources\pngout.exe" />
+    <Content Include="Resources\yuicompressor.jar" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MtimeClientCompress\MtimeClientCompress.csproj">
+      <Project>{4320E2F0-A570-4432-9533-7EA591F73962}</Project>
+      <Name>MtimeClientCompress</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(ProjectDir)\Resources\*.* $(TargetDir)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
