--- a/MtimeBuildTool/app.config
+++ b/MtimeBuildTool/app.config
@@ -4,6 +4,7 @@
     <add key="ExceptionLogPath" value="D:\MtimeTemp\MtimeBuildTool\"/>
     <add key="MtimeMovieCommunityRootPath" value="E:\Publish\Version\MtimeMovieCommunityRoot\" />
     <add key="MtimeWapRootPath" value="E:\Publish\Version\MtimeWapRoot\" />
+    <add key="MtimeVersionFolderPath" value="E:\Publish\Version\" />
     <add key="MtimeCompressToolPath" value="E:\CCNet\Codev3.0\Tools\MtimeClientCompress.root\MtimeClientCompress\MtimeClientCompress\bin\Release\MtimeClientCompress.exe" />
     <!-- 本地静态资源 -->
     <add key="Local_StaticResourceServer" value="http://114.255.169.215:8000/"/>
