--- a/MtimePackageTool/MtimePackageTool.csproj
+++ b/MtimePackageTool/MtimePackageTool.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <None Include="..\MtimeBuildTool\app.config">
       <Link>app.config</Link>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
