--- a/MtimeBuildTool/app.config
+++ b/MtimeBuildTool/app.config
@@ -7,9 +7,11 @@
     <add key="MtimeVersionFolderPath" value="E:\Publish\Version\" />
     <add key="MtimeCompressToolPath" value="E:\CCNet\Codev3.0\Tools\MtimeClientCompress.root\MtimeClientCompress\MtimeClientCompress\bin\Release\MtimeClientCompress.exe" />
     <!-- 本地静态资源 -->
-    <add key="Local_StaticResourceServer" value="http://114.251.245.9:8000/"/>
+    <add key="Local_StaticResourceServer" value="//static-test.mtime.cn/"/>
     <!-- 服务器静态资源 -->
-    <add key="Server_StaticResourceServer" value="http://static1.mtime.cn/"/>
+    <add key="Server_StaticResourceServer" value="//static1.mtime.cn/"/>
+    <!-- 服务器静态资源 -->
+    <add key="Server_Https_StaticResourceServer" value="//static1.mtime.cn/"/>
     <!-- 是否灰度处理图片 -->
     <add key="IsGrayImage" value="true"/>
     <!-- 使用新版压缩器 -->
